--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: "Huu Long Nguyen"
 email: your-email@domain.com
 url: "hlong.me"
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Hi, my name is Nguyen Huu Long. I am a student at International University"
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Business Intelligence - SQL - Data Analyst"
 meta_author: LastName FirstName
 
 # Google webmaster tools
