--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Huu Long Nguyen"
-email: your-email@domain.com
+email: nhlong1812@gmail.com
 url: "hlong.me"
 description: "Hi, my name is Nguyen Huu Long. I am a student at International University"
 keywords: "your keywords, separated by commas"
